log
Fri 12 Aug 2022 12:17:31 PM UTC: 
 tests:  0|7
total_score: 0/70
d73c9a3
Fri 12 Aug 2022 12:35:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:11: error: expected ‘;’ before ‘}’ token
   15 |     *c=a+b
      |           ^
      |           ;
   16 | }
      | ~          
Compilation failed
a6d2acc
Fri 12 Aug 2022 12:35:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
03d7a77
Fri 12 Aug 2022 12:40:24 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaN’:
exercises.c:26:13: error: expected ‘;’ before ‘tot’
   26 |       a[i]=i
      |             ^
      |             ;
   27 |       tot += a[i];
      |       ~~~    
Compilation failed
119d7a0
Fri 12 Aug 2022 12:40:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ff47156
Fri 12 Aug 2022 12:53:52 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:18: error: expected ‘;’ before ‘)’ token
   40 |   for(int i=0;i<n)
      |                  ^
      |                  ;
exercises.c:42:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   42 |   return suma;
      |          ^~~~
exercises.c:39:6: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a81c1c9
Fri 12 Aug 2022 12:54:08 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   41 |   return suma;
      |          ^~~~
exercises.c:39:6: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri 12 Aug 2022 12:54:30 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 20/70
315442e
Fri 12 Aug 2022 12:54:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: expected expression before ‘Persona’
   58 |    return Persona;
      |           ^~~~~~~
exercises.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b0b196c
Fri 12 Aug 2022 12:55:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:12: error: expected expression before ‘Persona’
   58 |    return *Persona;
      |            ^~~~~~~
exercises.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e48fd9f
Fri 12 Aug 2022 12:55:15 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:18: error: expected ‘;’ before ‘)’ token
   40 |   for(int i=0;i<n)
      |                  ^
      |                  ;
exercises.c:42:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   42 |   return suma;
      |          ^~~~
exercises.c:39:6: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0179cca
Fri 12 Aug 2022 12:56:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:102:8: error: invalid operands to binary + (have ‘Vector **’ and ‘Vector **’)
  102 |   *c=&a+&b;
      |      ~~^~~
      |      |  |
      |      |  Vector **
      |      Vector **
Compilation failed
ce41713
Fri 12 Aug 2022 12:57:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: ‘p’ undeclared (first use in this function)
   58 |    return p;
      |           ^
exercises.c:58:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8dc6678
Fri 12 Aug 2022 12:57:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0ad4c61
Fri 12 Aug 2022 01:01:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: expected expression before ‘int’
   40 |   *suma=sumaN(int a[],int n);
      |               ^~~
exercises.c:40:9: error: too few arguments to function ‘sumaN’
   40 |   *suma=sumaN(int a[],int n);
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
704053d
Fri 12 Aug 2022 01:01:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9b36063
Fri 12 Aug 2022 01:02:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:9: error: too many arguments to function ‘sumaN’
   40 |   *suma=sumaN(a,m,n);
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
00b3722
Fri 12 Aug 2022 01:02:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
cab8e10
Fri 12 Aug 2022 01:02:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3d0c061
Fri 12 Aug 2022 01:07:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:13: error: ‘i’ undeclared (first use in this function)
   40 |   int *b=(a+i);
      |             ^
exercises.c:40:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3cda324
Fri 12 Aug 2022 01:07:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b44cb2f
